--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   table_calendar: ^3.2.0
   url_launcher: ^6.3.1
 
+  http: ^0.13.3
+  http_parser: ^4.0.0
+  mime: ^1.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
