--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   url_launcher: ^6.3.1
   metadata_fetch: ^0.4.1
   cached_network_image: ^3.2.3
+  webview_flutter: ^4.0.7
 
 dev_dependencies:
   flutter_test:
